--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -90,8 +90,8 @@
             <h6 class="translate sub-title">Configuration</h6>
             <div class="row">
                 <div class="input-field col s12 m6">
-                    <textarea id="config"></textarea>
-                    <label for="config" class="translate">JSON configuration</label>
+                    <textarea id="configuration"></textarea>
+                    <label for="configuration" class="translate">JSON configuration</label>
                 </div>
             </div>
         </div>
