--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -90,7 +90,7 @@
             <h6 class="translate sub-title">Configuration</h6>
             <div class="row">
                 <div class="input-field col s12 m6">
-                    <textarea id="configuration"></textarea>
+                    <textarea id="configuration" class="value materialize-textarea"></textarea>
                     <label for="configuration" class="translate">JSON configuration</label>
                 </div>
             </div>
