--- a/www/index.html
+++ b/www/index.html
@@ -1,18 +1,18 @@
 <!doctype html>
 <html>
 <head>
+    <title>HomeHub</title>
+
     <!-- Replace "localhost" with real IP address of controller, if default port changed, correct it too -->
-    <script type="text/javascript" src="http://192.168.10.3:8084/socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="assets/js/conn.js"></script>
-    <script type="text/javascript" src="assets/js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript" src="assets/js/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="assets/js/mustache-3.0.1.min.js"></script>
-    <script type="text/javascript" src="assets/js/script.js" charset="utf-8"></script>
+    <script type="text/javascript" src="../../lib/js/socket.io.js"></script>
+    <script type="text/javascript" src="js/conn.js"></script>
+    <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="js/mustache-3.0.1.min.js"></script>
+    <script type="text/javascript" src="js/script.js" charset="utf-8"></script>
 
-    <script type="text/javascript" src="config.js" charset="utf-8"></script>
-
-    <link type="text/css" href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <link type="text/css" href="assets/css/style.css" rel="stylesheet">
+    <link type="text/css" href="css/bootstrap.min.css" rel="stylesheet">
+    <link type="text/css" href="css/style.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -20,7 +20,10 @@
         <span>HomeHub</span>
         <span id="time"></span>
     </header>
-    <div class="container" id="wrapper">
+    <div id="loading">
+        Loading. Please wait...
+    </div>
+    <div id="wrapper" class="container">
         <nav id="sidebar" class="offcanvas"></nav>
         <div id="content" class="panel-group"></div>
     </div>
@@ -29,9 +32,9 @@
         Check the browser console!
     -->
     <script type="text/javascript">
-        servConn._useStorage = false;
+        config = [];
 
-        initPage();
+        servConn._useStorage = false;
 
         var states = [];
         servConn.init({
@@ -42,6 +45,15 @@
             onConnChange: function (isConnected) {
                 if (isConnected) {
                     console.log('connected');
+
+                    servConn.getObject('system.adapter.homehub.0', false, function (error, obj) {
+                        console.log(JSON.stringify(obj));
+
+                        config['categories'] = obj['native']['categories']; 
+                        
+                        initPage();
+                    });
+
                     servConn.getStates(function (err, _states) {
                         var count = 0;
                         for (var id in _states) {
@@ -51,15 +63,10 @@
                         }
                         console.log('Received ' + count + ' states.');
                         states = _states;
-                    });
-                    /*servConn.getObjects(function (err, _objects){
-                        //console.log('OBJECTS: ' + JSON.stringify(_objects));
 
-                        var _enums = $(_objects).filter(function (i,n){
-                            console.log(n);
-                            return n.website==='yahoo'
-                        });
-                    });*/
+                        $('#loading').hide();
+                        $('#wrapper').show();
+                    });
                 } else {
                     console.log('disconnected');
                 }
