Added Prefix and Suffix as parameters

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -608,6 +608,8 @@
                                     <tr>
                                         <th data-name="id" class="translate">ID</th>
                                         <th data-name="type" class="translate">Type</th>
+                                        <th data-name="prefix" class="translate">Prefix</th>
+                                        <th data-name="suffix" class="translate">Suffix</th>
                                         <th data-name="readonly" data-type="checkbox" class="translate">Readonly</th>
                                         <th data-buttons="up down delete"></th>
                                     </tr>
