New Vue component: Icon

--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,7 @@
     <script src='js/components/header.vue.js'></script>
     <script src='js/components/item.vue.js'></script>
     <script src='js/components/state.vue.js'></script>
+    <script src='js/components/icon.vue.js'></script>
     <script src='js/components/sidebar.vue.js'></script>
 </head>
 <body>
